deployment_go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wr-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wr
  template:
    metadata:
      labels:
        app: wr
        version: go
    spec:
      containers:
      - name: wr
        image: mert/wr:go
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
      restartPolicy: Always #Default
      terminationGracePeriodSeconds: 30 #Default
      dnsPolicy: ClusterFirst #Default
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 5
  revisionHistoryLimit: 10 #Default
  progressDeadlineSeconds: 600
