deployment_java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivago-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivago
  template:
    metadata:
      labels:
        app: trivago
        version: java
    spec:
      containers:
      - name: trivago
        image: mert/trivago:java
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1024Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
      restartPolicy: Always #Default
      terminationGracePeriodSeconds: 30 #Default
      dnsPolicy: ClusterFirst #Default
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 5
  revisionHistoryLimit: 10 #Default
  progressDeadlineSeconds: 600
