service.yml
apiVersion: v1
kind: Service
metadata:
  name: wr
  labels:
    app: wr
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http
  selector:
    app: wr
