destination_rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: wr
spec:
  host: wr
  subsets:
  - name: java
    labels:
      version: java
  - name: go
    labels:
      version: go
