virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wr
spec:
  hosts:
  - "*"
  gateways:
  - wr-gateway
  http:
    - route:
      - destination:
          host: wr
          subset: go
        weight: 70
      - destination:
          host: wr
          subset: java
        weight: 30
